name:                cmudictParser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cmudictParser#readme
license:             BSD3
license-file:        LICENSE
author:              Charlie Bevis
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , WordFile
                     , CommonParsers
                     , RankingFile
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , parsec
                     , rhymebook
                     , monad-logger
                     , persistent                    >= 2.0        && < 2.7
                     , persistent-postgresql         >= 2.1.1      && < 2.7
                     , containers

  default-language:    Haskell2010

executable cmudictParser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cmudictParser
                     , text
                     , mtl
                     , parsec

  default-language:    Haskell2010

test-suite cmudictParser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cmudictParser
                     , rhymebook
                     , HUnit                         >= 1.5.0
                     , parsec
                     , mtl
                     , text
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cmudictParser
